[NTP] Add isCustomLink property to EmbeddedSearchAPI

The property is used to determine if we need to show the "Restore
default shortcuts" option. Previously this was calculated by checking
the tile source of the most visited items, but this did not account for
the case where there are no available items. As such, if there were no
custom links, the restore default option was disabled.

Bug: 879082
Change-Id: Ia15f4fc863642b520234c061ee5ecf6f7a54c50e
Reviewed-on: https://chromium-review.googlesource.com/1197465
Commit-Queue: Kristi Park <kristipark@chromium.org>
Reviewed-by: Mustafa Emre Acer <meacer@chromium.org>
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587835}
Former-commit-id: 9a51cfb2f0128ad1e7758586c5cbaba88e5a4a37