chrome/browser/search/instant_service_observer.cc
@@ -9,5 +9,5 @@ void InstantServiceObserver::ThemeInfoChanged(const ThemeBackgroundInfo&) {
 }
 
 void InstantServiceObserver::MostVisitedItemsChanged(
-    const std::vector<InstantMostVisitedItem>&) {
-}
+    const std::vector<InstantMostVisitedItem>&,
+    bool is_custom_links) {}
